tests/unit/default/syntax-error/089-add-pk-table-parens-name.e.t
---- IN ----
+PK%table(id
---- OUT ----
---- ERR ----
syntax: expected `)` after `+PK%table(id` instead of EOL at position 12 - at line 1
---- EXIT ----
1
